--- a/.github/workflows/workflow-secrets.yaml
+++ b/.github/workflows/workflow-secrets.yaml
@@ -4,4 +4,7 @@ jobs:
   display_values:
     runs-on: ubuntu-latest
     steps:
-      - run: echo ""
+      - run: 
+          echo "${{secrets.DATABASE_PASSWORD}}"
+          echo "${{vars.VERSION}}"
+            
