--- a/.github/workflows/workflow-secrets.yaml
+++ b/.github/workflows/workflow-secrets.yaml
@@ -7,4 +7,9 @@ jobs:
       - run: 
           echo "${{secrets.DATABASE_PASSWORD}}"
           echo "${{vars.VERSION}}"
-            
+      - name: GitHub Script
+        uses: actions/github-script@v7.0.1
+        id: step-return
+        with: 
+          script: return "Mon retour";
+          
