--- a/.github/workflows/workflow-secrets.yaml
+++ b/.github/workflows/workflow-secrets.yaml
@@ -12,4 +12,7 @@ jobs:
         id: step-return
         with: 
           script: return "Mon retour";
-          
+  reuse_values:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "A MODIFIER"
