--- a/.github/workflows/workflow-secrets.yaml
+++ b/.github/workflows/workflow-secrets.yaml
@@ -3,6 +3,8 @@ on: push
 jobs:
   display_values:
     runs-on: ubuntu-latest
+    outputs:
+      MON_RETOUR: ${{steps.step-return.outputs.result}}
     steps:
       - run: 
           echo "${{secrets.DATABASE_PASSWORD}}"
@@ -12,7 +14,9 @@ jobs:
         id: step-return
         with: 
           script: return "Mon retour";
-  reuse_values:
+  display_return:
     runs-on: ubuntu-latest
+    needs: [display_values]
     steps:
-      - run: echo "A MODIFIER"
+      - run: echo ${{needs.display_values.outputs.MON_RETOUR}}
+    
